fix(sponsors): use space around instead of space between to avoid centering issues when flexbox wraps

--- a/src/components/styles/sponsors.module.css
+++ b/src/components/styles/sponsors.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: auto;
 }
 
